NetBSD Problem Report #39590

From www@NetBSD.org  Sat Sep 20 04:23:11 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 2C93363BA98
	for <gnats-bugs@gnats.netbsd.org>; Sat, 20 Sep 2008 04:23:11 +0000 (UTC)
Message-Id: <20080920042310.E93D063B884@narn.NetBSD.org>
Date: Sat, 20 Sep 2008 04:23:10 +0000 (UTC)
From: timmcgil@gmail.com
Reply-To: timmcgil@gmail.com
To: gnats-bugs@NetBSD.org
Subject: wi driver doesn't recognise 3COM CRWE777A PCMCIA card
X-Send-Pr-Version: www-1.0

>Number:         39590
>Category:       kern
>Synopsis:       wi driver doesn't recognise 3COM CRWE777A PCMCIA card
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    pgoyette
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Sep 20 04:25:00 +0000 2008
>Closed-Date:    Wed Jun 01 23:40:39 +0000 2016
>Last-Modified:  Thu Jun 02 03:20:02 +0000 2016
>Originator:     Tim McGilchrist
>Release:        4
>Organization:
>Environment:
NetBSD puffy 4.0 NetBSD 4.0 (GENERIC_LAPTOP) #1: Wed Sep 10 17:56:18 UTC 2008  root@puffy:/usr/src/sys/arch/i386/compile/GENERIC_LAPTOP i386

>Description:
The 3COM CRWE777A PCMICA card isn't recognised by the wi(4) driver. 
Other BSD variants have support for this card. 
It appears that the Product Id is simply missing for this particular card.
>How-To-Repeat:
Insert a 3COM CRWE777A PCMCIA card into any laptop.
>Fix:
Adding the following product id to 'pcmciadevs' and running 'make -f Makefile.pcmciadevs' should generate the correct files to checkin.

product 3COM 3CRWE777A          0x0777 3Com AirConnect CRWE777A Wireless LAN

The man page for wi(4) should also be updated to show support for this card. I'd happily modify that file and submit a patch for it but I'm not sure how this process works with NetBSD.
Please email me the instructions or a link to them, as I'd like to get involved.


>Release-Note:

>Audit-Trail:
From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org
Subject: Re: kern/39590: wi driver doesn't recognise 3COM CRWE777A PCMCIA
	card
Date: Sat, 20 Sep 2008 04:44:03 +0000

 On Sat, Sep 20, 2008 at 04:25:00AM +0000, timmcgil@gmail.com wrote:
  > The man page for wi(4) should also be updated to show support for
  > this card. I'd happily modify that file and submit a patch for it
  > but I'm not sure how this process works with NetBSD.
  >
  > Please email me the instructions or a link to them, as I'd like to
  > get involved.

 It's easy once you have the patch - just send a PR and include the
 patch. (Preferably include, not attach, because gnats is kind of
 stupid about file attachments.) Or you can append the patch to this PR
 by replying to gnats-bugs. Make the patch with "diff -up old new".

 http://www.netbsd.org/contrib/ has more info.

 -- 
 David A. Holland
 dholland@netbsd.org

From: "Tim McGilchrist" <timmcgil@gmail.com>
To: gnats-bugs@netbsd.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: kern/39590: wi driver doesn't recognise 3COM CRWE777A PCMCIA card
Date: Mon, 6 Oct 2008 09:01:04 +1100

 Hi,

 Just a minor patch to add the 3Com CRWE777A card to the wi driver and
 add both the CRWE737A and 777A cards to the list in the wi.4 manpage.
 The diffs were generated by ' cvs diff -u -N ' and are included inline
 below.

 Tim

 Adding the CRWE777A pcmcia card to the wi driver

 ------------------------------------------------------------------

 Index: pcmciadevs
 ===================================================================
 RCS file: /cvsroot/src/sys/dev/pcmcia/pcmciadevs,v
 retrieving revision 1.227
 diff -u -r1.227 pcmciadevs
 --- pcmciadevs  6 Sep 2008 22:07:11 -0000       1.227
 +++ pcmciadevs  5 Oct 2008 21:57:48 -0000
 @@ -121,6 +121,7 @@

  /* 3COM Products */
  product 3COM 3CRWE737A         0x0001 3Com AirConnect Wireless LAN
 +product 3COM 3CRWE777A         0x0001 3Com AirConnect (CRWE777A) Wireless LAN
  product 3COM 3CXM056BNW                0x002f 3Com/NoteWorthy
 3CXM056-BNW 56K Modem
  product 3COM 3CXEM556          0x0035 3Com/Megahertz 3CXEM556 Ethernet/Modem
  product 3COM 3CXEM556INT       0x003d 3Com/Megahertz 3CXEM556-INT
 Ethernet/Modem
 Index: pcmciadevs.h
 ===================================================================
 RCS file: /cvsroot/src/sys/dev/pcmcia/pcmciadevs.h,v
 retrieving revision 1.230
 diff -u -r1.230 pcmciadevs.h
 --- pcmciadevs.h        6 Sep 2008 22:08:38 -0000       1.230
 +++ pcmciadevs.h        5 Oct 2008 21:57:48 -0000
 @@ -1,4 +1,4 @@
 -/*     $NetBSD: pcmciadevs.h,v 1.230 2008/09/06 22:08:38 rmind Exp $   */
 +/*     $NetBSD$        */

  /*
   * THIS FILE AUTOMATICALLY GENERATED.  DO NOT EDIT.
 @@ -129,6 +129,8 @@
  /* 3COM Products */
  #define        PCMCIA_CIS_3COM_3CRWE737A       { NULL, NULL, NULL, NULL }
  #define        PCMCIA_PRODUCT_3COM_3CRWE737A   0x0001
 +#define        PCMCIA_CIS_3COM_3CRWE777A       { NULL, NULL, NULL, NULL }
 +#define        PCMCIA_PRODUCT_3COM_3CRWE777A   0x0001
  #define        PCMCIA_CIS_3COM_3CXM056BNW      { NULL, NULL, NULL, NULL }
  #define        PCMCIA_PRODUCT_3COM_3CXM056BNW  0x002f
  #define        PCMCIA_CIS_3COM_3CXEM556        { NULL, NULL, NULL, NULL }
 Index: pcmciadevs_data.h
 ===================================================================
 RCS file: /cvsroot/src/sys/dev/pcmcia/pcmciadevs_data.h,v
 retrieving revision 1.230
 diff -u -r1.230 pcmciadevs_data.h
 --- pcmciadevs_data.h   6 Sep 2008 22:08:38 -0000       1.230
 +++ pcmciadevs_data.h   5 Oct 2008 21:57:49 -0000
 @@ -1,4 +1,4 @@
 -/*     $NetBSD: pcmciadevs_data.h,v 1.230 2008/09/06 22:08:38 rmind
 Exp $      */
 +/*     $NetBSD$        */

  /*
   * THIS FILE AUTOMATICALLY GENERATED.  DO NOT EDIT.
 @@ -64,6 +64,13 @@
             "3Com AirConnect Wireless LAN",     }
         ,
         {
 +           PCMCIA_VENDOR_3COM, PCMCIA_PRODUCT_3COM_3CRWE777A,
 +           PCMCIA_CIS_3COM_3CRWE777A,
 +           0,
 +           "3Com Corporation",
 +           "3Com AirConnect (CRWE777A) Wireless LAN",  }
 +       ,
 +       {
             PCMCIA_VENDOR_3COM, PCMCIA_PRODUCT_3COM_3CXM056BNW,
             PCMCIA_CIS_3COM_3CXM056BNW,
             0,


 ------------------------------------------------------------------


 Adding the 2 3Com cards to the wi.4 manpage

 ------------------------------------------------------------------

 Index: wi.4
 ===================================================================
 RCS file: /cvsroot/src/share/man/man4/wi.4,v
 retrieving revision 1.37
 diff -u -r1.37 wi.4
 --- wi.4        6 Jul 2005 07:47:45 -0000       1.37
 +++ wi.4        5 Oct 2008 21:38:06 -0000
 @@ -122,6 +122,10 @@
  .Pp
  .Bl -item -offset indent -compact
  .It
 +3Com AirConnect 3CRWE737A
 +.It
 +3Com AirConnect 3CRWE777A
 +.It
  Alvarion BreezeNET
  .It
  Lucent WaveLAN/IEEE 2.0Mb Bronze

 ------------------------------------------------------------------


 On Sat, Sep 20, 2008 at 3:45 PM, David Holland <dholland-bugs@netbsd.org> wrote:
 > The following reply was made to PR kern/39590; it has been noted by GNATS.
 >
 > From: David Holland <dholland-bugs@netbsd.org>
 > To: gnats-bugs@NetBSD.org
 > Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
 >        netbsd-bugs@netbsd.org
 > Subject: Re: kern/39590: wi driver doesn't recognise 3COM CRWE777A PCMCIA
 >        card
 > Date: Sat, 20 Sep 2008 04:44:03 +0000
 >
 >  On Sat, Sep 20, 2008 at 04:25:00AM +0000, timmcgil@gmail.com wrote:
 >  > The man page for wi(4) should also be updated to show support for
 >  > this card. I'd happily modify that file and submit a patch for it
 >  > but I'm not sure how this process works with NetBSD.
 >  >
 >  > Please email me the instructions or a link to them, as I'd like to
 >  > get involved.
 >
 >  It's easy once you have the patch - just send a PR and include the
 >  patch. (Preferably include, not attach, because gnats is kind of
 >  stupid about file attachments.) Or you can append the patch to this PR
 >  by replying to gnats-bugs. Make the patch with "diff -up old new".
 >
 >  http://www.netbsd.org/contrib/ has more info.
 >
 >  --
 >  David A. Holland
 >  dholland@netbsd.org
 >
 >

Responsible-Changed-From-To: kern-bug-people->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Wed, 01 Jun 2016 23:40:39 +0000
Responsible-Changed-Why:
I took care of it.


State-Changed-From-To: open->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Wed, 01 Jun 2016 23:40:39 +0000
State-Changed-Why:


From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39590 CVS commit: src/share/man/man4
Date: Wed, 1 Jun 2016 23:40:05 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Wed Jun  1 23:40:05 UTC 2016

 Modified Files:
 	src/share/man/man4: wi.4

 Log Message:
 Add 3Com 3CRWE777A (and, belatedly, 3CRWE737A) to the supported devices.

 From PR kern/39590


 To generate a diff of this commit:
 cvs rdiff -u -r1.40 -r1.41 src/share/man/man4/wi.4

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39590 CVS commit: src/sys/dev/pcmcia
Date: Wed, 1 Jun 2016 23:37:33 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Wed Jun  1 23:37:33 UTC 2016

 Modified Files:
 	src/sys/dev/pcmcia: if_wi_pcmcia.c

 Log Message:
 Add 3Com 3CRWE777A to supported devices.  From PR kern/39590


 To generate a diff of this commit:
 cvs rdiff -u -r1.90 -r1.91 src/sys/dev/pcmcia/if_wi_pcmcia.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.