Add 3Com 3CRWE777A to supported devices.  From PR kern/39590